added js folder and file

--- a/public/help.html
+++ b/public/help.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>This is the HELP page</head>
+<head>
+    <link rel="stylesheet" href="/css/styles.css">
+</head>
 <body>
     <h1>HELP!! HELP!! STATIC PAGE</h1>
 </body>
