--- a/public/about.html
+++ b/public/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>This is the About page</head>
+<head>
+    <link rel="stylesheet" href="/css/styles.css">
+</head>
 <body>
     <h1>ABOUT STATIC PAGE</h1>
 </body>
