--- a/public/about.html
+++ b/public/about.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>ABOUT STATIC PAGE</h1>
-    <img src="/public/Img/me.jpg">
+    <img src="/Img/me.png">
 </body>
 
 </html>
