--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="/css/styles.css">
+        
+        </style>
     </head>
     <body>
         <h1>From a static file</h1>
